--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,14 @@ dependencies:
   cloud_firestore: ^5.6.1
   http: ^1.2.2
   flutter_polyline_points: ^2.1.0
+  firebase_storage: ^12.4.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  path_provider: ^2.0.11
+  json_annotation: ^4.6.0
 
 
   flutter_lints: ^5.0.0
