--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,41 +1,32 @@
-name: flutter_application_shibuya
+name: test_project
 description: "A new Flutter project."
-publish_to: 'none' 
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
   sdk: ^3.6.1
-
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  envied: ^1.0.1
-  firebase_core: ^3.10.0
+  envied: ^1.1.1
+  flutter_polyline_points: ^2.1.0
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
-  cloud_firestore: ^5.6.1
-  http: ^1.2.2
-  flutter_polyline_points: ^2.1.0
-  firebase_storage: ^12.4.1
+  http: ^1.3.0
+  firebase_core: ^3.11.0
+  translator: ^1.0.3+1
+  firebase_storage: ^12.4.2
   image_picker: ^1.1.2
+  flutter_localization: ^0.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  path_provider: ^2.0.11
-  json_annotation: ^4.6.0
-
 
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.14
-  envied_generator: ^1.0.1
-
 
 flutter:
-
-
   uses-material-design: true
-
